--- a/jquery/html104.html
+++ b/jquery/html104.html
@@ -20,9 +20,9 @@ div{
 </head>
 
 <body>
-<div id="div1" class="box1">ФёХ\Ож</div>
-<div id="div2" class="box">ФёХ\Ож</div>
-<div id="div3" class="box alert">ФёХ\Ож</div>
+<div id="div1" class="box1">щЭЮшбичд║</div>
+<div id="div2" class="box">щЭЮшбичд║</div>
+<div id="div3" class="box alert">щЭЮшбичд║</div>
 </body>
 
 <script>
