--- a/jquery/html88.html
+++ b/jquery/html88.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-<div id="div1">ФёХ\Ож</div>
-<div id="div2">Х\Ож</div>
+<div id="div1">щЭЮшбичд║</div>
+<div id="div2">шбичд║</div>
 </body>
 
 <script>
